# decentralized-AI-project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
decentralized_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: generate_node_configs.py  run_node.py  run_pipeline.py  split_model.py
src/: main.py
src/core/: main.py
src/model/: model.py
src/network/: tensor_wire.py
src/node/: coordinator.py  layer_groups.py  node.py  node_group.py
src/nodes/: node.py
src/pipeline/: pipeline.py
src/tests/integration/: test_local_cluster.py
src/tests/unit/: conftest.py  test_node.py  test_node_group.py  test_pipeline.py  test_tensor_wire.py
